--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <h2 class="text-4xl font-bold mb-4 text-red-400">welcome to the casino!</h2>
                     <p class="text-xl text-gray-300">choose a game from the sidebar to get started</p>
                     <p class="text-lg mt-4 text-purple-400">good luck and gamble responsibly!</p>
+                    <p class="text-base mt-4 text-purple-400">note: this isnt a real gambling site, it uses fake currency</p>
                 </div>
             </div>
         </div>
