--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             <button onclick="resetMoney()" class="w-full p-3 text-left bg-black hover:bg-gray-900 rounded-lg transition-colors border border-red-700 mt-4">
                 💰 reset money
             </button>
+           <button onclick="" class="w-full p-3 text-left bg-black hover:bg-gray-900 rounded-lg transition-colors border border-red-700 mt-4">
+               ⚪ skins (COMING SOON)
+            </button>
+            <button onclick="" class="w-full p-3 text-left bg-black hover:bg-gray-900 rounded-lg transition-colors border border-red-700 mt-4">
+                📦 crates (COMING SOON)
+            </button>
+            
         </div>
     </div>
 
