--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
         </div>
     </div>
 
-    <div class="sidebar fixed top-16 left-0 w-64 h-full pt-4 z-40">
+    <div class="sidebar fixed top-16 left-0 w-64 h-full pt-4 z-40 overflow-y-auto border-r border-gray-700">
         <div class="px-4 space-y-2">
             <button onclick="showGame('lobby')" class="w-full p-3 text-left bg-red-900 hover:bg-red-800 rounded-lg transition-colors border border-red-700">
                 🎰 lobby
             </button>
+
+            <hr class="border-red-700">
+
             <button onclick="showGame('coinflip')" class="w-full p-3 text-left bg-purple-900 hover:bg-purple-800 rounded-lg transition-colors border border-purple-700">
                 🪙 coin flip
             </button>
+
             <button onclick="showGame('slots')" class="w-full p-3 text-left bg-purple-900 hover:bg-purple-800 rounded-lg transition-colors border border-purple-700">
                 🎰 slots
             </button>
@@ -40,17 +44,24 @@
             <button onclick="showGame('dice')" class="w-full p-3 text-left bg-purple-900 hover:bg-purple-800 rounded-lg transition-colors border border-purple-700">
                 🎲 dice
             </button>
-            <button onclick="" class="w-full p-3 text-left bg-purple-900 hover:bg-purple-800 rounded-lg transition-colors border border-purple-700">
-                ⚪ skins (COMING SOON)
+
+            <hr class="border-red-700">
+
+            <button onclick="showSkins()" class="w-full p-3 text-left bg-purple-900 hover:bg-purple-800 rounded-lg transition-colors border border-purple-700">
+                ⚪ skins
             </button>
-            <button onclick="" class="w-full p-3 text-left bg-purple-900 hover:bg-purple-800 rounded-lg transition-colors border border-purple-700">
-                📦 crates (COMING SOON)
+            <button onclick="showCrates()" class="w-full p-3 text-left bg-purple-900 hover:bg-purple-800 rounded-lg transition-colors border border-purple-700">
+                📦 crates
             </button>
+
+            <hr class="border-red-700">
+
             <button onclick="resetMoney()" class="w-full p-3 text-left bg-black hover:bg-gray-900 rounded-lg transition-colors border border-red-700 mt-4">
                 💰 reset money
             </button>
         </div>
     </div>
+
 
     <div class="ml-64 pt-20 min-h-screen">
         <div id="lobby" class="container mx-auto px-6 py-8">
@@ -60,6 +71,10 @@
                     <p class="text-xl text-gray-300">choose a game from the sidebar to get started</p>
                     <p class="text-lg mt-4 text-purple-400">good luck and gamble responsibly!</p>
                     <p class="text-base mt-4 text-purple-400">note: this isnt a real gambling site, it uses fake currency</p>
+                </div>
+                <div class="card-bg rounded-lg p-8 max-w-2xl mx-auto">
+                    <h2 class="text-4xl font-bold mb-4 text-red-400">update board!</h2>
+                    <p class="text-lg mt-4 text-purple-400">added skins, and crates!</p>
                 </div>
             </div>
         </div>
@@ -240,9 +255,86 @@
                 </div>
             </div>
         </div>
+        <div id="skins" class="hidden container mx-auto px-6 py-8">
+            <div class="max-w-4xl mx-auto">
+                <div class="card-bg rounded-lg p-6 border-2 border-red-800">
+                    <h2 class="text-3xl font-bold mb-6 text-center text-red-400">skins manager</h2>
+
+                    <div class="grid grid-cols-3 gap-4 mb-6">
+                        <button onclick="showSkinManager('blackjack')" class="p-4 bg-purple-800 rounded-lg hover:bg-purple-700 border border-purple-600 text-center">
+                            <div class="text-2xl mb-2">🃏</div>
+                            <div>blackjack skins</div>
+                        </button>
+                        <button onclick="showSkinManager('roulette')" class="p-4 bg-purple-800 rounded-lg hover:bg-purple-700 border border-purple-600 text-center">
+                            <div class="text-2xl mb-2">🎯</div>
+                            <div>roulette skins</div>
+                        </button>
+                        <button onclick="showSkinManager('plinko')" class="p-4 bg-purple-800 rounded-lg hover:bg-purple-700 border border-purple-600 text-center">
+                            <div class="text-2xl mb-2">🔻</div>
+                            <div>plinko skins</div>
+                        </button>
+                    </div>
+
+                    <div id="blackjackSkins" class="skin-manager hidden">
+                        <h3 class="text-2xl mb-4 text-purple-400">blackjack skins</h3>
+                        <div id="blackjackSkinList" class="grid grid-cols-2 gap-3"></div>
+                        <button onclick="showGame('skins')" class="mt-4 px-4 py-2 bg-gray-700 rounded hover:bg-gray-600">back</button>
+                    </div>
+
+                    <div id="rouletteSkins" class="skin-manager hidden">
+                        <h3 class="text-2xl mb-4 text-purple-400">roulette skins</h3>
+                        <div id="rouletteSkinList" class="grid grid-cols-2 gap-3"></div>
+                        <button onclick="showGame('skins')" class="mt-4 px-4 py-2 bg-gray-700 rounded hover:bg-gray-600">back</button>
+                    </div>
+
+                    <div id="plinkoSkins" class="skin-manager hidden">
+                        <h3 class="text-2xl mb-4 text-purple-400">plinko skins</h3>
+                        <div id="plinkoSkinList" class="grid grid-cols-2 gap-3"></div>
+                        <button onclick="showGame('skins')" class="mt-4 px-4 py-2 bg-gray-700 rounded hover:bg-gray-600">back</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="crates" class="hidden container mx-auto px-6 py-8">
+            <div class="max-w-4xl mx-auto">
+                <div class="card-bg rounded-lg p-6 border-2 border-red-800">
+                    <h2 class="text-3xl font-bold mb-6 text-center text-red-400">crates</h2>
+                    <div class="text-2xl mb-6 text-center">balance: <span class="text-yellow-400 font-bold balance-display">C$10</span></div>
+
+                    <div class="grid grid-cols-3 gap-6">
+                        <div class="crate-box text-center p-6 bg-gray-800 rounded-lg border-2 border-gray-600">
+                            <div class="text-4xl mb-4">📦</div>
+                            <h3 class="text-xl mb-2 text-gray-400">solid color crate</h3>
+                            <p class="text-sm mb-4 text-gray-500">contains common solid color skins</p>
+                            <div class="text-2xl mb-4 font-bold text-yellow-400">C$1,000</div>
+                            <button onclick="openCrate('common')" class="px-6 py-2 bg-gray-700 rounded-lg hover:bg-gray-600 border border-gray-500">open crate</button>
+                        </div>
+                        <div class="crate-box text-center p-6 bg-blue-900 rounded-lg border-2 border-blue-600">
+                            <div class="text-4xl mb-4">🎁</div>
+                            <h3 class="text-xl mb-2 text-blue-400">gradient crate</h3>
+                            <p class="text-sm mb-4 text-blue-300">contains rare gradient skins</p>
+                            <div class="text-2xl mb-4 font-bold text-yellow-400">C$5,000</div>
+                            <button onclick="openCrate('rare')" class="px-6 py-2 bg-blue-700 rounded-lg hover:bg-blue-600 border border-blue-500">open crate</button>
+                        </div>
+
+                        <div class="crate-box text-center p-6 bg-purple-900 rounded-lg border-2 border-purple-600">
+                            <div class="text-4xl mb-4">✨</div>
+                            <h3 class="text-xl mb-2 text-purple-400">patterned crate</h3>
+                            <p class="text-sm mb-4 text-purple-300">contains legendary patterned skins</p>
+                            <div class="text-2xl mb-4 font-bold text-yellow-400">C$10,000</div>
+                            <button onclick="openCrate('legendary')" class="px-6 py-2 bg-purple-700 rounded-lg hover:bg-purple-600 border border-purple-500">open crate</button>
+                        </div>
+                    </div>
+
+                    <div id="crateMessage" class="text-xl text-center mt-6"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-        <script src="casino.js"></script>
+    <script src="casino.js"></script>
 </body>
 
 </html>
